tests/valid/definite/ConstrainedInt_Valid_3.whiley
// this is a comment!
cr3nat as int where $ < 10

cr3nat f(cr3nat x):
    return 1

void System::main([string] args):
    cr3nat y
    y = f(9)
    print str(y)
